RESOLVED FIXED11222
fast/js/window-properties sometimes reports window.document.location.replace is a function
https://bugs.webkit.org/show_bug.cgi?id=11222
Summary fast/js/window-properties sometimes reports window.document.location.replace ...
Attachments
Maciej Stachowiak
Comment 1 2006-10-18 01:14:55 PDT
Seems to me that window.document.location.replace should always be there. I wonder why it only shows up sporadically and is not in the original expected results.
Geoffrey Garen
Comment 2 2006-10-18 18:33:37 PDT
This is because the location object lacks static references to its properties. I have a fix.
Geoffrey Garen
Comment 3 2006-10-18 18:46:52 PDT
In other words, I suspect this test was borked from the beginning.
Geoffrey Garen
Comment 4 2006-10-18 18:48:56 PDT
Committed revision 17126. I win again, WebCore.
Note You need to log in before you can comment on or make changes to this bug.