LayoutTests:

Reviewed by Beth.

        Updated some results now that some global JS objects repeatably report their
        statically declared properties.

        * fast/js/window-properties-expected.txt:
        * fast/js/window-properties.html:

WebCore:

        Reviewed by Beth.

        Fixed http://bugs.webkit.org/show_bug.cgi?id=11222

        Some global JS objects lacked references to their property hashtables,
        so for-in enumeration didn't work. I added the references, and then removed
        a few bogus properties from the tables. The bogus ones got in there through
        bit rot.

        We should come up with some solution to these hand-written bindings bugs.
        Maybe we could use a script to autogenerate them or something.

        * bindings/js/kjs_window.cpp:
        (KJS::):
        (KJS::History::getValueProperty):



Canonical link: https://commits.webkit.org/14394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17126 268f45cc-cd09-0410-ab3c-d52691b4dbfc