WebCore/bindings/js/kjs_window.cpp
@@ -2038,7 +2038,7 @@ UString FrameArray::toString(ExecState *) const
 
 ////////////////////// Location Object ////////////////////////
 
-const ClassInfo Location::info = { "Location", 0, 0, 0 };
+const ClassInfo Location::info = { "Location", 0, &LocationTable, 0 };
 /*
 @begin LocationTable 12
   assign        Location::Assign        DontDelete|Function 1
@@ -2050,7 +2050,6 @@ const ClassInfo Location::info = { "Location", 0, 0, 0 };
   port          Location::Port          DontDelete
   protocol      Location::Protocol      DontDelete
   search        Location::Search        DontDelete
-  [[==]]        Location::EqualEqual    DontDelete|ReadOnly
   toString      Location::ToString      DontDelete|Function 0
   replace       Location::Replace       DontDelete|Function 1
   reload        Location::Reload        DontDelete|Function 0
@@ -2247,7 +2246,7 @@ JSValue *LocationFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const 
 
 ////////////////////// Selection Object ////////////////////////
 
-const ClassInfo Selection::info = { "Selection", 0, 0, 0 };
+const ClassInfo Selection::info = { "Selection", 0, &SelectionTable, 0 };
 /*
 @begin SelectionTable 19
   anchorNode                Selection::AnchorNode               DontDelete|ReadOnly
@@ -2260,7 +2259,6 @@ const ClassInfo Selection::info = { "Selection", 0, 0, 0 };
   extentOffset              Selection::ExtentOffset             DontDelete|ReadOnly
   isCollapsed               Selection::IsCollapsed              DontDelete|ReadOnly
   type                      Selection::_Type                    DontDelete|ReadOnly
-  [[==]]                    Selection::EqualEqual               DontDelete|ReadOnly
   toString                  Selection::ToString                 DontDelete|Function 0
   collapse                  Selection::Collapse                 DontDelete|Function 2
   collapseToEnd             Selection::CollapseToEnd            DontDelete|Function 0
@@ -2372,7 +2370,7 @@ JSValue *SelectionFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const
 
 ////////////////////// BarInfo Object ////////////////////////
 
-const ClassInfo BarInfo::info = { "BarInfo", 0, 0, 0 };
+const ClassInfo BarInfo::info = { "BarInfo", 0, &BarInfoTable, 0 };
 /*
 @begin BarInfoTable 1
   visible                BarInfo::Visible                        DontDelete|ReadOnly
@@ -2416,7 +2414,7 @@ bool BarInfo::getOwnPropertySlot(ExecState *exec, const Identifier& propertyName
 
 ////////////////////// History Object ////////////////////////
 
-const ClassInfo History::info = { "History", 0, 0, 0 };
+const ClassInfo History::info = { "History", 0, &HistoryTable, 0 };
 /*
 @begin HistoryTable 4
   length        History::Length         DontDelete|ReadOnly
@@ -2434,18 +2432,12 @@ bool History::getOwnPropertySlot(ExecState *exec, const Identifier& propertyName
 
 JSValue *History::getValueProperty(ExecState *, int token) const
 {
-  switch (token) {
-  case Length:
-  {
+    ASSERT(token == Length);
     BrowserExtension *ext = m_frame->browserExtension();
     if (!ext)
       return jsNumber(0);
 
     return jsNumber(ext->getHistoryLength());
-  }
-  default:
-    return jsUndefined();
-  }
 }
 
 UString History::toString(ExecState *exec) const
